--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,7 +5,14 @@
 }
 body {
   background: #101010;
-  padding: 50px 0;
+  padding: 50px 30px;
+
+  @media (min-width: 460px) {
+    padding: 50px 20px;
+  }
+  @media (min-width: 600px) {
+    padding: 50px 0px;
+  }
 }
 
 h1 {
@@ -13,7 +20,11 @@ h1 {
   text-transform: uppercase;
   margin: 0 auto 60px;
   letter-spacing: 5px;
-  font-size: 3em;
+  font-size: 2em;
+
+  @media (min-width: 460px) {
+    font-size: 3em;
+  }
 }
 
 
